<resources>
    <string name="app_name">Recicloid</string>
    <string name="action_settings">Opciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="address">Dirección: </string>
    <string name="title_recogida_activity">Punto de recogida</string>
    <string name="title_menu_principal">Menú Principal</string>
	<string name="title_activity_solicitud_enseres">Seleccionar muebles y enseres</string>
    <string name="title_solicitud">Solicitar recogida</string>
    <string name="descr_solicitud">Realice una petición para que acudamos a recoger muebles y enseres.</string>
    <string name="title_info_reciclaje">Información</string>
    <string name="descr_info_reciclaje">Consulta información sobre reciclaje y tratamiento de residuos.</string>
    <string name="title_historial">Historial de Solicitudes</string>
    <string name="descr_historial">Consultar historial de peticiones de recogida realizadas.</string>
	<string name="title_contact">Contacte con nosotros</string>
    <string name="descr_contact">Teléfono contacto de lunes a viernes de 10:00 a 21:00.</string>
    <string name="title_menu_enseres">Tipos de muebles y enseres</string>
    <string name="dialog_info_solicitud_enseres">Añadir muebles y enseres para su recogida.</string>
        <string name="dialog_info_solicitud_enseres_descr">Solicitud de recogida para el día </string>
    <string name="dialog_descr_info_solicitud_enseres">Seleccione uno o mas muebles y enseres que desea que sean recogidos para su posterior reciclaje por parte del servicio municipal. Si el enser que desea que recojamos no está entre los mostrados en la aplicación por favor pongase en contacto con nosotros.</string>
	<string name="punto_de_recogida">Punto de Recogida</string>
    <string-array name="categorias_enseresa">
        <item>Baño</item>
        <item>Cocina</item>
        <item>Dormitorio</item>
        <item>Exteriores</item>
        <item>Salon</item>
        <item>General</item>
    </string-array>
    <string name="description_item">item</string>
    <string name="item_bathtub">bañera</string>
    <string name="item_sink">lavabo</string>
    <string name="item_bidet">bidet</string>
    <string name="item_bath_furniture">mueble de baño</string>
    <string name="item_shower_plate">placa ducha</string>
    <string name="item_bath_self">estantería de baño</string>
    <string name="item_wc">inodoro</string>
    <string name="item_kitchen_sink">fregadero</string>
    <string name="item_worktop">encimera</string>
    <string name="item_kitchen_table">mesa de cocina</string>
    <string name="item_fridge">frigorífico</string>
    <string name="item_kitchen_self">estantería de cocina</string>
    <string name="item_oven">horno</string>
    <string name="item_microwave">microondas</string>
    <string name="item_dishwasher">lavavajillas</string>
    <string name="item_kitchen_closet">armario de cocina</string>
    <string name="item_kitchen_fire">placa</string>
    <string name="item_kitchen_gas">cocina de gas</string>
    <string name="item_bed">cama individual</string>
    <string name="item_doublebed">cama de matrimonio</string>
    <string name="item_bedroom_table">mesa de dormitorio</string>
    <string name="item_bedroom_closet">armario de dormitorio</string>
    <string name="item_bedside_table">mesilla de noche</string>
    <string name="item_bedroom_chair">silla</string>
    <string name="item_garden_table">mesa de jardín</string>
    <string name="item_barbacue">barbacoa</string>
    <string name="item_garden_chair">silla de jardín</string>
    <string name="item_sofa">sofá</string>
    <string name="item_living_chair">silla</string>
    <string name="item_living_table">mesa</string>
    <string name="item_armchair">butaca</string>
    <string name="item_living_furniture">mueble de salón</string>
    <string name="item_living_shelf">estantería</string>
    <string name="item_desk">esctitorio</string>
    <string name="item_door">puerta</string>
    <string name="item_heater">estufa</string>
    <string name="title_activity_ubicacion_recogida">Establece tu ubicación</string>
    <string name="dialog_title_4items">Atención</string>
    <string name="dialog_descr_4items">La recogida de muebles y enseres en un servicio gratuito proporcionado por 
        el ayuntamiento de su localidad. El número máximo de elementos que serán recogidos por un usuario es de 
        cuatro al día. Si desea solicitar la recogida de más de 4 elementos su solicitud se realizará en varias 
        jornadas recogiendose 4 elementos en cada una de estas.</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_selectlocacion_title">Establecer punto de recogida</string>
    <string name="dialog_localizando_punto_recogida">Localizando punto de recogida más cercano</string>
    <string name="dialog_selectlocation_auto">Por ubicación actual del móvil</string>
    <string name="dialog_selectlocation_manual">Establecer manualmente</string>
    <string name="dialog_title_location_not_valid">Localización no válida</string>
    <string name="dialog_descr_location_not_valid">Lamentamos comunicarlo que la 
        localizacion seleccionado no se corresponde
        con el área al que damos servicio actualmente. Le rogamos que escoja otra 
        o bien se ponga en contacto con nosotros
        telefónicamente.</string>
    <string name="dialog_err_location_gpsint3d_disabled">    GPS y acceso a vía internet deshabilitados</string>
    <string name="dialog_err_dir_exception">Error al obtener la dirección</string>
    <string name="dialog_descr_error_dir_exception">No fue posible obtener la ubicación correspondiente
        a dicha dirección.</string>
    <string name="dialog_error_canceling">No se pudieron cancelar las solicitudes</string>
    <string name="dialog_canceling_ok">Solicitudes de recogida canceladas</string>
    <string name="dialog_err_location_exception">Se produjo un error al obtener
        la ubicación actual.</string>
    <string name="dialog_err_google_play_title">Debes actualizar Google Play</string>
    <string name="dialog_err_google_play_descr">Es necesario que registres tu movil en Google Play, y actualices a la 
        última versión para poder utilizar esta aplicación.</string>
    <string name="nearestPoint_message">Buscando punto de recogida mas cercano</string>
    <string name="dialog_err_dir_conection_descr">No se pudo establecer la conexión con el servidor, prueba si tiene habilitado 3g en su móvil o conexión WIFI.Si el error persiste, por favor intentelo mas tarde. </string>
    <string name="dialog_err_location_error_not_exist_nearest">No hay ningun punto de recogida cerca de tu localización, por favor intentalo de nuevo. Si el error se repite contacte con nuestro teléfono de contacto.</string>
    <string name="dialog_confirmar_aceptar">Confirmar</string>
    <string name="dialog_confirmar_furnitures">Recogida de </string>
    <string name="dialog_confirmar_furnitures2"> enseres. </string>
    <string name="dialog_confirmar_numeroNoValido">Se han confirmado un número no valido de enseres.</string>
    <string name="dialog_confirmar_numeroNoValido2">Faltan por confirmar </string>
    <string name="dialog_confirmar_numeroNoValido3"> enseres.</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_confirmar_ubicacion">Confirmar Ubicación de Recogida</string>
	<string name="dialog_title_cancel_request">Advertencia</string>
    <string name="dialog_descr_cancel_request">¿Está usted seguro de que desea cancelar las peticiones de recogida?</string>
    <string name="dialog_ask_telephone">Introduce el telefono de contacto con el que fue realizada la solicitud de recogida.</string>
    <string name="dialog_more_furnitures_title">Elige una opción</string>
    <string name="dialog_more_funitures_add">Añadir un elemento mas</string>
    <string name="dialog_more_furnitures_reset">Descartar todos los elementos seleccionados</string>
    <string name="title_activity_datos_contacto">Datos de Contacto</string>
    <string name="dialog_title_prev_request">Hay una solicitud en curso</string>
    <string name="dialog_descr_prev_request">No se pudo realizar la solicitud, ya que existe una solicitud previa pendiente de realizar.Puede acceder a su historial en el Menú principal o contactar con nosotros.</string>
    <string name="dialog_obtains_dir">Obteniendo dirección</string>
    <string name="info_datos_contacto"><![CDATA[
<html><head></head><body style="text-align:justify><p>En caso de que haya alg&uacute;n tipo de dificultad a la hora de localizar los enseres en el punto de recogida, o alguna incidencia en la recogida requerimos de un n&uacute;mero de tel&eacute;fono de contacto.</p>
<p>Por favor ind&iacute;quenos un tel&eacute;fono y el nombre de una persona de contacto, por si tuvi&eacute;ramos que contactar con ud. Dicho tel&eacute;fono podr&acute; ser un fijo o un m&oacute;vil.</p></body></html>]]></string>
    <string name="menu_datos_contacto_title">Datos de contacto</string>
    <string name="menu_datos_nombre">Nombre</string>
    <string name="menu_datos_contacto_telefono">Teléfono de contacto</string>
    <string name="title_activity_confirmar_fechas">Fecha de recogida</string>
    <string name="message_registrer_user">Registrando datos de contacto.Espere por favor.</string>
    <string name="loadind_title">Espere por favor.</string>
    <string name="message_obtainsProvisionalAppointment_descr">Obteniendo solicitudes de recogida de muebles y enseres.</string>
    <string name="message_confirmAppointment_descr">Confirmando solicitudes de recogida.</string>
    <string name="dialog_title_not_valid_user">Contacto no valido</string>
    <string name="dialog_title_not_valid_user_descr">No ha sido posible registrar los datos de contacto, compruebe si dispone de una petición de recogida en curso. En caso de no ser así, por favor póngase en contacto con nosotros.</string>
    <string name="menu_condiciones_uso_title">Condiciones de uso</string>
    <string name="condiciones_uso"><![CDATA[
<html><head></head><body style="text-align:justify>
<p>Debido a anteriores actos vand&aacute;licos se ruega al usuario que deposite los enseres en el punto de recogida a horas posteriores a la medianoche, o en la madrugada. As&iacute; mismo se recuerda al usuario que es responsabilidad del mismo lo que pueda acontecer causado por dichos objetos. La recogida se har&aacute;  a la ma&ntilde;ana siguiente de su dep&oacute;sito. \n Los datos aportados de nombre y tel&eacute;fono se almacenar&aacute;n en el sistema del ayuntamiento y ser&aacute;n utilizados &uacute;nicamente para contacar con el usuario en caso de que haya alguna incidencia en el proceso de recogida. Su almacenamiento y tratamiento se realizar&aacute; tal y como exige la ley org&aacute;nica 15/1999 o ley de protecci&oacute;n de datos. </p>
<p>El aceptar los t&eacute;rminos anteriormente especificados dan conformidad de que ud se responsabiliza de los enseres depositados hasta su recogida, y de que da su conformidad para que contactemos con usted en caso de que se produzca alguna incidencia en el proceso de recogida.</p></body></html>]]></string>
<string name="accept_conditions">Acepto las condiciones</string>
    <string name="menu_confirmar_fecha_title">Confirmar fecha de recogida</string>
    <string name="title_activity_condiciones_uso">Condiciones de Uso</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="cofirmation">Confirmar Recogida</string>
    <string name="intro_message_confirm_1">Se recogeran </string>
    <string name="intro_message_confirm_2"> enseres para la fecha </string>
    <string name="message_finalize">Confirmada solicitud de recogida</string>
    <string name="message_error_confirmation">No se pudieron confirmar las solicitudes</string>
    <string name="title_splash">Ayuntamiento de</string>
    <string name="subtitle_splash">Puerto Real</string>
</resources>