<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    android:orientation="vertical" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/logo_ayuntamiento" />

    <TextView
        android:id="@+id/textViewSplash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/title_splash"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gold" />

    <TextView
        android:id="@+id/textViewSplash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_splash"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gold" />
    
</LinearLayout>
