<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CondicionesUsoActivity" >

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="12"
    >
    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/condiciones_uso"
	        android:singleLine="false"
	        android:scrollHorizontally="false"
	        android:scrollbars="vertical"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:padding="10dp" />
        
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBoxAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="left|center"
        android:paddingTop="5dp"
        android:text="@string/accept_conditions" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_solicitud" />
    
</LinearLayout>
